--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://pasindumaduranga:pasi20020302@ecommercenew.boyfy.mongodb.net/ticketsupportsystem?retryWrites=true&w=majority&appName=Ecommercenew
 PORT=4000
+JWT_SECRET=pasindu
